@@ -1,7 +1,14 @@
+2011-03-20 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCmain.c, src/SDCCmacro.c, src/SDCCmacro.h, src/SDCCutil.c,
+	  src/SDCCutil.h: dbuf-ized SDCCmacro.c
+
 2011-03-19 Borut Razem <borut.razem AT gmail.com>
 
-	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCmacro.c, src/SDCCmacro.h:
-	  fixed bug #3152525: sdcc doesn't pass double-quotes from -D option to sdcpp
+	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCmacro.c,
+	  src/SDCCmacro.h:
+	  fixed bug #3152525:
+	  sdcc doesn't pass double-quotes from -D option to sdcpp
 	* debugger/mcs51/simi.c:
 	  call ioctl(sock, FIONBIO, &iMode)
 	  replaced with fcntl(sock, F_SETFL, FNONBLOCK | FASYNC) on *nix
